[package]
name = "listen-util"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
actix-web.workspace = true
serde.workspace = true
log.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true